<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/txt_nombre_rifa"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/blanco" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:background="@color/negro"
        android:ems="10"
        android:inputType="text"
        android:paddingBottom="@dimen/Height_editText"
        android:text="@string/txtField_nombre_rifa"
        android:textColor="@color/azul_claro" >

        <requestFocus />
    </EditText>

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView4"
        android:baselineAligned="true" >
    </RadioGroup>

    <ImageButton
        android:id="@+id/btnCancelar_rifa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@color/negro"
        android:contentDescription="@string/src_cancelar"
        android:onClick="cancelar1"
        android:paddingLeft="@dimen/weight_barBottom2"
        android:paddingRight="@dimen/weight_barBottom2"
        android:src="@android:drawable/ic_menu_close_clear_cancel" />

    <ImageButton
        android:id="@+id/btnAdd_rifa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@color/negro"
        android:contentDescription="@string/src_add_rifa"
        android:paddingLeft="@dimen/weight_barBottom2"
        android:paddingRight="@dimen/weight_barBottom2"
        android:src="@android:drawable/ic_menu_add" />

    <RadioButton
        android:id="@+id/radio1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnAdd_rifa"
        android:layout_alignParentLeft="true"
        android:text="@string/btn_tomar_foto"
        android:textColor="@color/blanco" />

    <RadioButton
        android:id="@+id/radio0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/radio1"
        android:layout_alignParentLeft="true"
        android:checked="false"
        android:text="@string/btn_buscar_foto"
        android:textColor="@color/blanco" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/radio0"
        android:layout_alignParentLeft="true"
        android:text="@string/txt_imagen_rifa"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/blanco" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:text="@string/txt_tipo_rifa"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/blanco" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView4"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/radio0"
        android:background="@color/azul_claro"
        android:entries="@array/tipo_rifa"
        android:prompt="@string/src_spinner"
        tools:listitem="@android:layout/simple_spinner_dropdown_item" />

</RelativeLayout>