<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/txt_tickets"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/blanco" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:text="@string/inf_tickets_generados"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/blanco" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="34dp"
        android:text="@string/txt_fecha_rifa"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/blanco" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView3"
        android:text="@string/inf_estado_fecha_rifa"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/blanco" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="34dp"
        android:text="@string/txt_recaudado"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/blanco" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:text="@string/inf_cantidad_recaudada"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/blanco" />
    
    <ImageButton
        android:id="@+id/btnNew_Ticket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="@color/negro"
        android:contentDescription="@string/src_nuevo_ticket"
        android:onClick="NewTicket"
        android:src="@android:drawable/ic_menu_add" />

    <RatingBar
        android:id="@+id/ratingBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnNew_Ticket"
        android:layout_alignParentRight="true" />

</RelativeLayout>