<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Login" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/txt_correo"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/blanco" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="@color/azul_oscuro"
        android:background="@color/negro"
        android:paddingBottom="@dimen/Height_editText"
        >

        <requestFocus
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editText1"
        android:layout_marginTop="28dp"
        android:text="@string/txt_contra"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/blanco" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/azul_oscuro"
        android:background="@color/negro"
        android:paddingBottom="@dimen/Height_editText"
        />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editText2"
        android:layout_marginTop="22dp"
        android:background="@color/negro"
        android:contentDescription="@string/btn_entrar"
        android:onClick="entrar"
        android:paddingLeft="@dimen/Height_editText"
        android:paddingRight="@dimen/Height_editText"
        android:src="@drawable/ic_entrar2" />

</RelativeLayout>